# Nawia_ARPG

./: .gitignore  README.md
Nawia/: CMakeLists.txt  Nawia.slnx
Nawia/Nawia/: Nawia.vcxproj  main.cpp
Nawia/Nawia/x64/Debug/: vc145.idb
Nawia/Nawia/x64/Debug/Nawia.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Nawia.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Nawia/SDL3_mixer/cmake/: SDL3_mixer-shared-targets-release.cmake
Nawia/assets/data/: abilities.json  items.json  loottables.json
Nawia/assets/maps/: map1.json  test.map  tiles.json
Nawia/assets/maps/demo_map/: demo_map.json
Nawia/assets/maps/demo_map/tile_sets/: bones.tsx  bush1.tsx  bush2.tsx  cave.tsx  cliffs.tsx  firecamp.tsx  house1.tsx  house2.tsx  tomb1.tsx  tomb2.tsx  tomb3.tsx  tree1.tsx  tree2.tsx  tree3.tsx  tree4.tsx  true_false.tsx  wood1.tsx
Nawia/assets/maps/test_map/: README.md  test_map.json  test_map.tmx
Nawia/assets/maps/test_map/tile_sets/: Animated.tsx  Arch.tsx  Blocks.tsx  Castle.tsx  Clutter.tsx  DoorsWindows.tsx  Ground.tsx  HalfWall.tsx  Interior.tsx  Nature.tsx  Overlay.tsx  Paving.tsx  People.tsx  Roof.tsx  Stairs.tsx  WallOpening.tsx  WallSolid.tsx  WoodStructure.tsx
Nawia/assets/models/: bandit_death.glb  bandit_idle.glb  bandit_throw.glb  bandit_walk.glb  bandit_walk2.glb  bandit_walk_backwards3.glb  cat_bounce.glb  devil_attack.glb  devil_dead.glb  devil_idle.glb  devil_run.glb  devil_walk.glb  dummy.glb  player_knocked.glb  player_stand_up.glb  test3.glb  test4.glb  test5.glb  walking_dead_attack.glb  walking_dead_death.glb  walking_dead_hit.glb  walking_dead_idle.glb  walking_dead_run.glb  walking_dead_scream.glb  walking_dead_walk.glb
Nawia/docs/Dokumentacja projektu grupowego/: PG_WETI_DPP_wer. 1.00.doc  PG_WETI_DTP_wer. 1.00.doc  PG_WETI_Plakat.doc
Nawia/docs/guides/: AbilityEffect_Guide.md  Ability_Guide.md  Enemy_Guide.md  Entity_Guide.md  Interactive_Guide.md
Nawia/src/: CMakeLists.txt  Nawia.vcxproj  Nawia.vcxproj.filters  README.md  line_counter.py  logs.txt  main.cpp
Nawia/src/Core/: CMakeLists.txt  Camera.cpp  Camera.h
Nawia/src/Game/: CMakeLists.txt  Game.cpp  Game.h
Nawia/src/Game/Entities/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
Nawia/src/Game/World/: Map.cpp  Map.h
Nawia/src/core/: Constants.h  Engine.cpp  Engine.h  GlobalScaling.h
Nawia/src/core/game/: Camera.h  Dialogue.h  DialogueManager.cpp  DialogueManager.h  EntityManager.cpp  EntityManager.h  FireballSpell.cpp  FireballSpell.h  Game.cpp  Game.h  Map.cpp  Map.h  Spell.cpp  Spell.h  Tile.h
Nawia/src/core/system/: Settings.cpp  Settings.h
Nawia/src/core/system/input/: PlayerController.cpp  PlayerController.h
Nawia/src/core/util/: Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  ResourceManager.cpp  ResourceManager.h
Nawia/src/entity/: Entity.cpp  Entity.h  README.md
Nawia/src/entity/abilities/: Ability.cpp  Ability.h  AbilityEffect.cpp  AbilityEffect.h  AbilityStats.h  Projectile.cpp  Projectile.h  README.md
Nawia/src/entity/abilities/Fireball/: FireballAbility.cpp  FireballAbility.h
Nawia/src/entity/actors/: Dummy.cpp  Dummy.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
Nawia/src/entity/collider/: Collider.cpp  Collider.h
Nawia/src/entity/components/: AnimationComponent.cpp  AnimationComponent.h
Nawia/src/entity/effects/: Projectile.cpp  Projectile.h  SpellEffect.cpp  SpellEffect.h
Nawia/src/entity/interactive/: Interactable.h
Nawia/src/entity/interactiveObjects/: InteractiveObject.cpp  InteractiveObject.h  Triger.cpp  Trigger.h  Usable.cpp  Usable.h
Nawia/src/item/: Item.cpp  Item.h  ItemDatabase.cpp  ItemDatabase.h
Nawia/src/item/inventory/: Backpack.cpp  Backpack.h  Equipment.cpp  Equipment.h
Nawia/src/item/types/: Boots.h  Chestplate.h  Head.h  Legs.h  Necklace.h  Offhand.h  Ring.h  Weapon.h
Nawia/src/item/utils/: Loottable.cpp  Loottable.h
Nawia/src/ui/: StatsUI.cpp  StatsUI.h  UIHandler.cpp  UIHandler.h
Nawia/src/ui/dialogue/: DialogueUI.cpp  DialogueUI.h
Nawia/src/ui/inventory/: ChestUI.cpp  ChestUI.h  InventoryUI.cpp  InventoryUI.h
Nawia/src/ui/menu/: SettingsMenu.cpp  SettingsMenu.h
Nawia/src/x64/Debug/: Nawia.exe.recipe  vc145.idb
Nawia/tiled/: tiles.tsx
Nawia/tiled/maps/: map1.tmx
(+68 files in other folders)
